Started hero page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,23 @@
 <!--TODO-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Home - Derek Jain</title> 
+        <link rel="stylesheet" type="text/css" href="hero.css">
+    </head>
+    <body>
+
+        <header class="header">
+            <h5>About me</h5>
+            <h5>Experience</h5>
+            <h5>Contact</h5>
+
+        </header>
+        <div class="content">
+            <img src="me.jpg">
+            <h2>Derek Jain</h2>
+        </div>
+       
+        
+    </body>
+</html>
