Changin hero and starting experience

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,18 +6,32 @@
         <link rel="stylesheet" type="text/css" href="hero.css">
     </head>
     <body>
-
-        <header class="header">
-            <h5>About me</h5>
-            <h5>Experience</h5>
-            <h5>Contact</h5>
-
-        </header>
-        <div class="content">
-            <img src="me.jpg">
-            <h2>Derek Jain</h2>
-        </div>
        
+            <div class="header">
+                <div class="basic">
+                    Derek
+                </div>
+                <div class="links">
+                    <a href="about.html">
+                        <h5>About me</h5>
+                    </a>
+                    <a href="experience.html">
+                        <h5>Experience</h5>
+                    </a>
+                    <h5>Contact</h5>
+                </div>
+
+            </div>
+            <div class="content">
+                <img src="me.jpg">
+                <div class="info">
+                    <img src="circle.png">
+                    <div class="middle">
+                        <h3>Derek Jain</h3>
+                        <h4>Tennis Player | Student </h4>
+                    </div>
+                </div>
+            </div>
         
     </body>
 </html>
