hero page adjustment s

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,16 +9,20 @@
        
             <div class="header">
                 <div class="basic">
-                    Derek
+                    <a href="index.html">
+                        <h4>Derek</h4>
+                    </a>
                 </div>
                 <div class="links">
                     <a href="about.html">
-                        <h5>About me</h5>
+                        <h4>About me</h4>
                     </a>
                     <a href="experience.html">
-                        <h5>Experience</h5>
+                        <h4>Experience</h4>
                     </a>
-                    <h5>Contact</h5>
+                    <a href="contact.html">
+                        <h4>Contact</h4>
+                    </a>
                 </div>
 
             </div>
@@ -27,8 +31,8 @@
                 <div class="info">
                     <img src="circle.png">
                     <div class="middle">
-                        <h3>Derek Jain</h3>
-                        <h4>Tennis Player | Student </h4>
+                        <h1>Derek Jain</h1>
+                        <h1>Tennis Player | Student </h1>
                     </div>
                 </div>
             </div>
