Finalizing experience page

--- a/portfolio/experience.html
+++ b/portfolio/experience.html
@@ -5,35 +5,81 @@
         <link rel="stylesheet" type="text/css" href="experience.css">
     </head>
     <body>
+        <div class="sticky-container">
+        <div class="header">
+            <div class="basic">
+                <a href="index.html">
+                    <h4>Derek</h4>
+                </a>
+            </div>
+            <div class="links">
+                <a href="about.html">
+                    <h4>About me</h4>
+                </a>
+                <a href="experience.html">
+                    <h4>Experience</h4>
+                </a>
+                <a href="contact.html">
+                    <h4>Contact</h4>
+                </a>
+            </div>
+        </div>
         <div class="container">
             <div class="timeline">
+                <div class="vl"></div>
                 <ul>
                     <li>
                         <div class="event">
+                            <img src="Experience-photos/begin.png">
                             <h2>Starting Tennis</h2>
-                            <p>I started tennis when I was 5 years old at the Menlo Circus Club.</p>
+                            <p>In 2011, I started tennis when I was 5 years old at the Menlo Circus Club.</p>
+                            <div class="bullet" ></div>
                         </div>
                     </li>
                     <li>
                         <div class="event">
-                            <h2>Playing My First Tournament</h2>
-                            <p>I started to play more competetively at the age of 11.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="event">
+                            <img src="Experience-photos/sets.png">
                             <h2>100 Sets</h2>
-                            <p>In 2017, I got the award at my club for completing 100 sets within one summer</p>
+                            <p>In 2017, I got the award at my club for completing 100 sets within one summer.</p>
+                            <div class="bullet" ></div>
+                        </div>
+                        
+                    </li>
+                    <li>
+                        <div class="event">
+                            <img src="Experience-photos/first.png">
+                            <h2>Playing My First Tournament</h2>
+                            <p>In 2018, I started to play more competetively at the age of 12.</p>
+                            <div class="bullet" ></div>
                         </div>
                     </li>
                     <li>
                         <div class="event">
-                            <h2>Winning My First  Tournamnet</h2>
-                            <p></p>
+                            <img src="Experience-photos/win.png">
+                            <h2>Winning My First  Tournament</h2>
+                            <p>In 2019, I won my first tournament at Willow Glen Highschool.</p>
+                            <div class="bullet" ></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="event">
+                            <img src="Experience-photos/junior.png">
+                            <h2>Junior Player of the Year</h2>
+                            <p>In 2020, I was named Junior Player of the Year at my club.</p>
+                            <div class="bullet" ></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="event">
+                            <img src="Experience-photos/invintational.png">
+                            <h2>Circus Club Doubles Invitational</h2>
+                            <p>In 2022, Sam Engel and I won our section of the Circus Club's Invitationals.</p>
+                            <div class="bullet" ></div>
                         </div>
                     </li>
                 </ul>
             </div>
+        </div>
         </div>
     </body>
 </html>
