Full draft of about page

--- a/portfolio/experience.html
+++ b/portfolio/experience.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="experience.css">
     </head>
     <body>
-        <div class="sticky-container">
+        
         <div class="header">
             <div class="basic">
                 <a href="index.html">
@@ -39,8 +39,8 @@
                     <li>
                         <div class="event">
                             <img src="Experience-photos/sets.png">
-                            <h2>100 Sets</h2>
-                            <p>In 2017, I got the award at my club for completing 100 sets within one summer.</p>
+                            <h2>50 Sets</h2>
+                            <p>In 2017, I got the award at my club for completing 50 sets within one summer. I got 100 sets the next year.</p>
                             <div class="bullet" ></div>
                         </div>
                         
