Almost final draft of all pages

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -18,9 +18,6 @@
                 <a href="experience.html">
                     <h4>Experience</h4>
                 </a>
-                <a href="contact.html">
-                    <h4>Contact</h4>
-                </a>
             </div>
         </div>
         <div class="content">
@@ -35,8 +32,9 @@
                 I attended Trinity Elemntary school and am now a a junior at Menlo Highschool. As a student, I've gained intrest in many other fields, especilly more in computer science. I have taken all the courses for computer science as I could and am now taking AT CS. 
             </p>
             <div class="images-2">
-                <img src="About-photos/pace.png">
                 <img src="About-photos/Doubles.png">
+                <img src="About-photos/GreenBallWhiteLetter.png">
+                
             </div>
             <p class="blurb-2">
                 Today, I practice my tennis at the Plus One academy (originally named Pure Pace) located in Ladera Rec. For the past two highschool years, 
