removing mainly all unneccessary styles

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -21,22 +21,22 @@
             </div>
         </div>
         <div class="content">
-            <div class="images-1">
+            <div class="images">
                 <img src="About-photos/wedding.JPG">
                 <img src="About-photos/menlo.png">
             </div>
-            <p class="blurb-1">
+            <p class="me">
                 Ever since I was 5, I spent half of my time working on school and my other half playing tennis. I took a liking to the sport since it felt so fast paced while also being so independent. It has been over 11 years since that point, and it all started at the Menlo Circus Club. 
                 Talking about my family, my dad immigrated from India at the age of 5 and my mom has always lived in the United States. I've taken part in many of my dad's traditions, usually attending indian weddings with his family mainly in the east coast. My dad also took a liking to tennis later on in his lfie and is now competing in tournaments just like me.
                 I also have one dog and two older sisters, one who has graduated form dartmouth and the other is a sophmore at UCLA. 
                 I attended Trinity Elemntary school and am now a a junior at Menlo Highschool. As a student, I've gained intrest in many other fields, especilly more in computer science. I have taken all the courses for computer science as I could and am now taking AT CS. 
             </p>
-            <div class="images-2">
+            <div class="images">
                 <img src="About-photos/Doubles.png">
                 <img src="About-photos/GreenBallWhiteLetter.png">
                 
             </div>
-            <p class="blurb-2">
+            <p class="me">
                 Today, I practice my tennis at the Plus One academy (originally named Pure Pace) located in Ladera Rec. For the past two highschool years, 
                 I have been at the top of our school's junior varsity team and have gone undefeated as either number one or number two singles indivudally during our team matches. In 2023, I will hopefully
                 be joining our school's varisty roster and keep our trend of being part of the top in the nation. I also now volunteer as an aistant coach at an orginazation called 'EPATT' (East Palo Alto Tennis & Tutoring) during the summer and the first semester of each school year.
