--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,4 +1,3 @@
-<!--TODO-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -24,9 +23,9 @@
 
             </div>
             <div class="content">
-                <img src="me.jpg">
+                <img src="hero-photos/me.jpg">
                 <div class="info">
-                    <img src="circle.png">
+                    <img src="hero-photos/circle.png">
                     <div class="middle">
                         <h2>Derek Jain</h2>
                         <h2>Tennis Player | Student </h2>
@@ -35,6 +34,7 @@
             </div>
             <hr>
             <div class="contact">
+                <h1>Contact Derek!</h1>
                 <div class="phone">
                     <h1>Phone</h1>
                     <img src="contact-photos/phone-3-icon-17-256.png">
