--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -54,7 +54,7 @@
                 <div class="UTR">
                     <h1>UTR</h1>
                     <img src="contact-photos/ball.svg">
-                    <h3>Get a hold of me through the universal tennis site:</h3>
+                    <h3>Contact me at the Universal Tennis site:</h3>
                     <a href="https://app.universaltennis.com/profiles/473516">
                         Unniveral Tennis Link
                     </a>
