Major layout changes to each section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,14 +2,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-         <!-- Required meta tags -->
-         <meta charset="utf-8">
-         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
-         <!-- Bootstrap CSS -->
-         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-         
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        
          <!-- Your Personal CSS BELOW this Line -->
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="scripts/typing.js"></script>
         <title>Home - Derek Jain</title> 
         <link rel="stylesheet" type="text/css" href="styles/style.css">
         <link rel="stylesheet" type="text/css" href="styles/hero.css">
@@ -27,18 +31,22 @@
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">About Me</a>
+                <a class="nav-link" href="about.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Experience</a>
+                <a class="nav-link" href="experience.html">Experience</a>
                 </li>
             </ul>
             </div>
         </nav>
         <div class="container">
             <div class="jumbotron intro">
-                <h1>Derek Jain</h1>
-                <h2>Tennis Player | Student</h2>
+              <!--Obtained and altered from https://bootsnipp.com/snippets/XRNAv-->
+              <h1>
+                <a class="typewrite" data-period="2000" data-type='[ "Hi, Im Derek.", "I am a Tennis Player.", "I am a Student.", "I Love to Code." ]'>
+                  <span class="wrap"></span>
+                </a>
+              </h1>
 
             </div>
         </div>
