--- a/portfolio/experience.html
+++ b/portfolio/experience.html
@@ -8,26 +8,126 @@
          <!-- Bootstrap CSS -->
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <title>Experience</title>
-        <link rel="stylesheet" type="text/css" href="experience.css">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
+        <link rel="stylesheet" type="text/css" href="styles/experience.css">
     </head>
     <body>
         
-        <div class="header">
-            <div class="basic">
-                <a href="index.html">
-                    <h4>Derek</h4>
-                </a>
+        <!--Obtained and altered from https://getbootstrap.com/docs/4.0/components/navbar/-->
+        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+            <a class="navbar-brand" href="#">Derek</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="about.html">About Me</a>
+                </li>
+                <li class="nav-item active">
+                <a class="nav-link" href="experience.html">Experience</a>
+                </li>
+            </ul>
             </div>
-            <div class="links">
-                <a href="about.html">
-                    <h4>About me</h4>
-                </a>
-                <a href="experience.html">
-                    <h4>Experience</h4>
-                </a>
+        </nav>
+        <div class="container">
+            <div class="timeline">
+                <div class="row spaced">
+                    <div class="col-md-6">
+                        <div class="card bg-dark wide text-center">
+                            <div id="carouselExampleControls" class="carousel slide card-img-top" data-ride="carousel">
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img class="d-block w-100" src="photos/begin.png" alt="First slide">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="d-block w-100" src="..." alt="Second slide">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="d-block w-100" src="..." alt="Third slide">
+                                  </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </div>
+                            <div class="card-body">
+                                <h2 class="card-text">Starting Tennis</h2>
+                                <p class="card-text">In 2011, I started tennis when I was 5 years old at the Menlo Circus Club.</p>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="row spaced">
+                    <div class="offset-md-6 col-md-6">
+                        <div class="card bg-dark wide text-center">
+                            <img class="card-img-top" src="photos/sets.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h2 class="card-text">50 Sets</h2>
+                                <p class="card-text">In 2017, I got the award at my club for completing 50 sets within one summer. I got 100 sets the next year.</p>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="row spaced">
+                    <div class="col-md-6">
+                        <div class="card bg-dark wide text-center">
+                            <img class="card-img-top" src="photos/first.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h2 class="card-text">Playing My First Tournament</h2>
+                                <p class="card-text">In 2018, I started to play more competetively at the age of 12.</p>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="row spaced">
+                    <div class="offset-md-6 col-md-6">
+                        <div class="card bg-dark wide text-center">
+                            <img class="card-img-top" src="photos/win.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h2 class="card-text">Winning My First  Tournament</h2>
+                                <p class="'card-text">In 2019, I won my first tournament at Willow Glen Highschool.</p>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="row spaced">
+                    <div class="col-md-6">
+                        <div class="card bg-dark wide text-center">
+                            <div class="card bg-dark">
+                                <img class="card-img-top" src="photos/junior.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h2 class="card-text">Junior Player of the Year</h2>
+                                    <p class="card-text">In 2020, I was named Junior Player of the Year at my club.</p>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row spaced">
+                    <div class="offset-md-6 col-md-6">
+                        <div class="card bg-dark wide text-center">
+                            <div class="card bg-dark">
+                                <img class="card-img-top" src="photos/invintational.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h2 class="card-text">Circus Club Doubles Invitational</h2>
+                                    <p class="card-text">In 2022, Sam Engel and I won our section of the Circus Club's Invitationals.</p>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="container">
+        <!-- <div class="container">
             <div class="timeline">
                 <div class="vl"></div>
                 <ul>
@@ -83,7 +183,7 @@
                 </ul>
             </div>
         </div>
-        </div>
+        </div> -->
         <!-- Your Content ABOVE this Line -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
