--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,9 +10,6 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
          <!-- Your Personal CSS BELOW this Line -->
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="scripts/typing.js"></script>
         <title>Home - Derek Jain</title> 
         <link rel="stylesheet" type="text/css" href="styles/style.css">
@@ -43,7 +40,8 @@
             <div class="jumbotron intro">
               <!--Obtained and altered from https://bootsnipp.com/snippets/XRNAv-->
               <h1>
-                <a class="typewrite" data-period="2000" data-type='[ "Hi, Im Derek.", "I am a Tennis Player.", "I am a Student.", "I Love to Code." ]'>
+                Hi, I'm
+                <a class="typewrite" data-period="2000" data-type='[ "Derek.", "a Tennis Player.", "a Student."]''>
                   <span class="wrap"></span>
                 </a>
               </h1>
@@ -74,8 +72,8 @@
                           Emails
                         </button>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="#">School: </a>
-                          <a class="dropdown-item" href="#">Personal: </a>
+                          <a class="dropdown-item" href="#">School: derek.jain@menloschool.org</a>
+                          <a class="dropdown-item" href="#">Personal: derekdjain@gmail.com</a>
                         </div>
                       </div>
                     </div>
